simple material-based template (action-bar submenu, action button and color changes)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">AndroidChatBot</string>
+    <string name="app_name">Собеседник</string>
+    <string name="action_settings">Настройки</string>
 </resources>
