--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,6 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="action_settings">Settings</string>
     <string name="app_name">ChatBot</string>
+    <string name="action_settings">Settings</string>
     <string name="en_locale">English</string>
     <string name="ru_locale">Русский</string>
 </resources>
