--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -4,4 +4,5 @@
     <string name="action_settings">Settings</string>
     <string name="en_locale">English</string>
     <string name="ru_locale">Русский</string>
+    <string name="select_locale_label">Select language:</string>
 </resources>
