--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -3,5 +3,6 @@
     <string name="app_name">Собеседник</string>
     <string name="action_settings">Настройки</string>
     <string name="en_locale">English</string>
-    <string name="ru_locale">Русск</string>
+    <string name="ru_locale">Русский</string>
+    <string name="select_locale_label">Выберите язык:</string>
 </resources>
