--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="en_locale">English</string>
     <string name="ru_locale">Русский</string>
     <string name="select_locale_label">Select language:</string>
+    <string name="hello_world">Hello World!</string>
 </resources>
