--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -5,5 +5,7 @@
     <string name="en_locale">English</string>
     <string name="ru_locale">Русский</string>
     <string name="select_locale_label">Выберите язык:</string>
-    <string name="hello_world">Привет, мир!</string>
+    <string name="main_label">Нажмите на кнопку в правом нижнем углу, чтобы начать/открыть чат.</string>
+    <string name="chat_label">Текущий чат</string>
+    <string name="title_item_detail">Подробности</string>
 </resources>
