--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="en_locale">English</string>
     <string name="ru_locale">Русский</string>
     <string name="select_locale_label">Select language:</string>
-    <string name="hello_world">Hello World!</string>
+    <string name="main_label">Touch button at bottom right corner of screen to start/open chat</string>
+    <string name="chat_label">Current chat</string>
+    <string name="title_item_detail">Item Detail</string>
 </resources>
