--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -6,6 +6,7 @@
     <string name="ru_locale">Русский</string>
     <string name="select_locale_label">Select language:</string>
     <string name="main_label">Touch button at bottom right corner of screen to start/open chat.</string>
-    <string name="chat_label">Current chat</string>
+    <string name="chat_name">Current chat</string>
     <string name="title_item_detail">Item Detail</string>
+    <string name="settings_name">Settings</string>
 </resources>
