--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="select_locale_label">Select language:</string>
     <string name="main_label">Touch button at bottom right corner of screen to start/open chat</string>
     <string name="title_item_detail">Item Detail</string>
+    <string name="input_message_hint">Input message</string>
 </resources>
