[IMPLEMENTATION] pattern to LoginActivity

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -10,4 +10,8 @@
     <string name="title_item_detail">Item Detail</string>
     <string name="settings_name">Settings</string>
     <string name="input_message_hint">Input message</string>
+    <string name="login_label">Login:</string>
+    <string name="password_label">Password:</string>
+    <string name="input_login_hint">Your username</string>
+    <string name="input_password_hint">Your password</string>
 </resources>
